# astra

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backup  Dockerfile.scheduler  TODO_CALENDAR.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: check.yml  db-watchdog.yml  smoke.yml
.logs/: apex.err  bookkeeper.err  bridge.err  email.err  finance.err  helmtech.err  linkedin.err  scheduler.err  whatsapp.err
astra/: __init__.py  bridge_daemon.py  config.py  main.py  notifications.py
astra/a2a/: __init__.py  client.py  discovery.py  exceptions.py  models.py  server.py
astra/agents/: recommender.py  registry.py
astra/autonomy/: approvals.py  audit.py  hooks.py  manager.py  models.py  modes.py
astra/calendar/: __init__.py  client.py  harvester.py  models.py  seed.py  store.py  writeback.py
astra/context/: __init__.py  now.py
astra/core/: agent.py  model_router.py  system_prompt.py
astra/creators/: __init__.py  _shared.py  analyze_reference_site.py  critique.py  draft.py  draft_brand_kit.py  draft_caption_set.py  draft_carousel.py  draft_component_spec.py  draft_doc.py  draft_hashtag_set.py  draft_linkedin_post.py  draft_one_pager.py  draft_page_content.py  draft_site_brief.py  draft_subtitle_set.py  draft_thread.py  draft_video_brief.py  draft_voiceover_script.py  edit_code.py  edit_kit.py  image.py  kits.py  render.py  render_pptx.py  render_site_preview.py  self_improve.py  store.py
astra/db/: engine.py  models.py
astra/email/: __init__.py  classify.py  client.py  signals.py
astra/evals/: __init__.py  checks.py  golden.py  run.py
astra/meetings/: __init__.py  calendar_trigger.py  capture.py  pipeline.py  summarizer.py  transcriber.py
astra/memory/: consolidation.py  embeddings.py  importance.py  models.py  post_turn_extract.py  retrieval.py  store.py
astra/notes/: __init__.py  harvester.py  missed_sessions.py  models.py  store.py  training_state.py  writeback.py
astra/push/: __init__.py  sender.py
astra/research/: __init__.py  context.py  meta_review.py  runner.py  topics.py
astra/runtime/: __init__.py  agent_loop.py  event_emitter.py  event_log.py  preview_store.py  sdk_adapter.py  sdk_compat.py  session_store.py  session_title.py  tool_registry.py  turn_store.py
astra/scheduler/: _legacy_celery_app.py.bak  _legacy_tasks.py.bak  _legacy_triggers.py.bak  app.py  briefing_v2.py  catchup.py  content.py  jobs.py
astra/services/: __init__.py  manager.py  tunnel.py
astra/shares/: __init__.py  pipeline.py  store.py
astra/tasks/: __init__.py  models.py  store.py
astra/telemetry/: __init__.py  models.py  store.py
astra/tools/: a2a_tools.py  agent_fleet_tools.py  agent_repos_tools.py  artifact_tools.py  autonomy_tools.py  browser_tools.py  business_state_tools.py  calendar_tools.py  code_editor_tools.py  content_tools.py  creator_tools.py  email_tools.py  kit_editor_tools.py  (+11 more)
business-kits/: README.md  compass.md
docs/: STATE_OF_ASTRA_2026-06-11.md  migration_debt_state.md  migration_debt_tools.md  runbook-secret-rotation.md  timeout_hierarchy.md
scripts/: backfill_session_titles.py  backup-postgres.py  e2e_smoke.py  gcal_reauth.py  gmail_reauth.py  issue_bridge_token.py  migrate-to-railway.sh  scheduler-entrypoint.sh
tests/: conftest.py  test_agent_repos.py  test_channel_addendum.py  test_drafter_evals.py  test_e2e.py  test_fleet_status.py  test_phase_a_sensory.py  test_phase_b_briefings.py  test_phase_c_approvals.py  test_railway_ops.py
(+232 files in other folders)
